Bug 219570 - assert in GDB: varobj_.isEmpty() [KDevelop::GdbVariable::setVarobj, CreateVarobjHandler::handle, GDBDebugger::GDBCommand::invokeHandler]
Summary: assert in GDB: varobj_.isEmpty() [KDevelop::GdbVariable::setVarobj, CreateVar...
Status: RESOLVED FIXED
Alias: None
Product: kdevelop
Classification: Applications
Component: CPP Debugger (other bugs)
Version First Reported In: unspecified
Platform: Arch Linux Linux
: NOR crash
Target Milestone: ---
Assignee: kdevelop-bugs-null
URL:
Keywords:
: 230431 233045 234953 235304 (view as bug list)
Depends on:
Blocks:
 
Reported: 2009-12-21 17:04 UTC by Milian Wolff
Modified: 2010-04-25 23:34 UTC (History)
6 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Milian Wolff 2009-12-21 17:04:08 UTC
Application: kdevelop (3.9.97 (using KDevPlatform 0.9.97))
KDE Platform Version: 4.3.85 (KDE 4.3.85 (KDE 4.4 Beta2))
Qt Version: 4.6.0
Operating System: Linux 2.6.31-ARCH x86_64
Distribution (Platform): Archlinux Packages

-- Information about the crash:
Did a GDB session (kdevelop in kdevelop), than restarted one of the isntances and reattached to the new one. Than I hit this assert.

 -- Backtrace:
Application: KDevelop (kdevelop), signal: Aborted
[Current thread is 1 (Thread 0x7f758c8fa760 (LWP 5525))]

Thread 15 (Thread 0x7f7576add710 (LWP 5526)):
#0  0x00007f7588f393e9 in pthread_cond_timedwait@@GLIBC_2.3.2 () from /lib/libpthread.so.0
#1  0x00007f75891c4472 in QWaitCondition::wait(QMutex*, unsigned long) () from /usr/lib/libQtCore.so.4
#2  0x00007f7585843165 in KDevelop::DUChainPrivate::CleanupThread::run (this=0x24455f0) at /home/milian/projects/kde4/kdevplatform/language/duchain/duchain.cpp:286
#3  0x00007f75891c3545 in ?? () from /usr/lib/libQtCore.so.4
#4  0x00007f7588f3481a in start_thread () from /lib/libpthread.so.0
#5  0x00007f7587617c7d in clone () from /lib/libc.so.6
#6  0x0000000000000000 in ?? ()

Thread 14 (Thread 0x7f757045f710 (LWP 5527)):
#0  0x00007f7588f3907c in pthread_cond_wait@@GLIBC_2.3.2 () from /lib/libpthread.so.0
#1  0x00007f75891c450b in QWaitCondition::wait(QMutex*, unsigned long) () from /usr/lib/libQtCore.so.4
#2  0x00007f758ad23ff6 in ThreadWeaver::WeaverImpl::blockThreadUntilJobsAreBeingAssigned (this=0x2efabe0, th=0x2ee1c50)
    at /home/build/build-x86_64/kdelibs/src/kdelibs/threadweaver/Weaver/WeaverImpl.cpp:365
#3  0x00007f758ad2660b in ThreadWeaver::WorkingHardState::applyForWork (this=0x2ef30e0, th=0x2ee1c50) at /home/build/build-x86_64/kdelibs/src/kdelibs/threadweaver/Weaver/WorkingHardState.cpp:71
#4  0x00007f758ad26624 in ThreadWeaver::WorkingHardState::applyForWork (this=0x2ef30e0, th=0x2ee1c50) at /home/build/build-x86_64/kdelibs/src/kdelibs/threadweaver/Weaver/WorkingHardState.cpp:74
#5  0x00007f758ad26624 in ThreadWeaver::WorkingHardState::applyForWork (this=0x2ef30e0, th=0x2ee1c50) at /home/build/build-x86_64/kdelibs/src/kdelibs/threadweaver/Weaver/WorkingHardState.cpp:74
#6  0x00007f758ad26624 in ThreadWeaver::WorkingHardState::applyForWork (this=0x2ef30e0, th=0x2ee1c50) at /home/build/build-x86_64/kdelibs/src/kdelibs/threadweaver/Weaver/WorkingHardState.cpp:74
#7  0x00007f758ad24b5f in ThreadWeaver::ThreadRunHelper::run (this=0x7f757045ee30, parent=0x2efabe0, th=0x2ee1c50) at /home/build/build-x86_64/kdelibs/src/kdelibs/threadweaver/Weaver/Thread.cpp:87
#8  0x00007f758ad250c8 in ThreadWeaver::Thread::run (this=0x2ee1c50) at /home/build/build-x86_64/kdelibs/src/kdelibs/threadweaver/Weaver/Thread.cpp:142
#9  0x00007f75891c3545 in ?? () from /usr/lib/libQtCore.so.4
#10 0x00007f7588f3481a in start_thread () from /lib/libpthread.so.0
#11 0x00007f7587617c7d in clone () from /lib/libc.so.6
#12 0x0000000000000000 in ?? ()

Thread 13 (Thread 0x7f756f45d710 (LWP 5529)):
#0  0x00007f7587611503 in select () from /lib/libc.so.6
#1  0x00007f7589291d5d in ?? () from /usr/lib/libQtCore.so.4
#2  0x00007f75891c3545 in ?? () from /usr/lib/libQtCore.so.4
#3  0x00007f7588f3481a in start_thread () from /lib/libpthread.so.0
#4  0x00007f7587617c7d in clone () from /lib/libc.so.6
#5  0x0000000000000000 in ?? ()

Thread 12 (Thread 0x7f756e45b710 (LWP 5557)):
#0  0x00007f7588f3907c in pthread_cond_wait@@GLIBC_2.3.2 () from /lib/libpthread.so.0
#1  0x00007f75891c450b in QWaitCondition::wait(QMutex*, unsigned long) () from /usr/lib/libQtCore.so.4
#2  0x00007f758ad23ff6 in ThreadWeaver::WeaverImpl::blockThreadUntilJobsAreBeingAssigned (this=0x2efabe0, th=0x5c5dc50)
    at /home/build/build-x86_64/kdelibs/src/kdelibs/threadweaver/Weaver/WeaverImpl.cpp:365
#3  0x00007f758ad2660b in ThreadWeaver::WorkingHardState::applyForWork (this=0x2ef30e0, th=0x5c5dc50) at /home/build/build-x86_64/kdelibs/src/kdelibs/threadweaver/Weaver/WorkingHardState.cpp:71
#4  0x00007f758ad24b5f in ThreadWeaver::ThreadRunHelper::run (this=0x7f756e45ae30, parent=0x2efabe0, th=0x5c5dc50) at /home/build/build-x86_64/kdelibs/src/kdelibs/threadweaver/Weaver/Thread.cpp:87
#5  0x00007f758ad250c8 in ThreadWeaver::Thread::run (this=0x5c5dc50) at /home/build/build-x86_64/kdelibs/src/kdelibs/threadweaver/Weaver/Thread.cpp:142
#6  0x00007f75891c3545 in ?? () from /usr/lib/libQtCore.so.4
#7  0x00007f7588f3481a in start_thread () from /lib/libpthread.so.0
#8  0x00007f7587617c7d in clone () from /lib/libc.so.6
#9  0x0000000000000000 in ?? ()

Thread 11 (Thread 0x7f756dc5a710 (LWP 5560)):
#0  0x00007f7588f3907c in pthread_cond_wait@@GLIBC_2.3.2 () from /lib/libpthread.so.0
#1  0x00007f75891c450b in QWaitCondition::wait(QMutex*, unsigned long) () from /usr/lib/libQtCore.so.4
#2  0x00007f758ad23ff6 in ThreadWeaver::WeaverImpl::blockThreadUntilJobsAreBeingAssigned (this=0x2efabe0, th=0x6d5cdc0)
    at /home/build/build-x86_64/kdelibs/src/kdelibs/threadweaver/Weaver/WeaverImpl.cpp:365
#3  0x00007f758ad2660b in ThreadWeaver::WorkingHardState::applyForWork (this=0x2ef30e0, th=0x6d5cdc0) at /home/build/build-x86_64/kdelibs/src/kdelibs/threadweaver/Weaver/WorkingHardState.cpp:71
#4  0x00007f758ad26624 in ThreadWeaver::WorkingHardState::applyForWork (this=0x2ef30e0, th=0x6d5cdc0) at /home/build/build-x86_64/kdelibs/src/kdelibs/threadweaver/Weaver/WorkingHardState.cpp:74
#5  0x00007f758ad26624 in ThreadWeaver::WorkingHardState::applyForWork (this=0x2ef30e0, th=0x6d5cdc0) at /home/build/build-x86_64/kdelibs/src/kdelibs/threadweaver/Weaver/WorkingHardState.cpp:74
#6  0x00007f758ad24b5f in ThreadWeaver::ThreadRunHelper::run (this=0x7f756dc59e30, parent=0x2efabe0, th=0x6d5cdc0) at /home/build/build-x86_64/kdelibs/src/kdelibs/threadweaver/Weaver/Thread.cpp:87
#7  0x00007f758ad250c8 in ThreadWeaver::Thread::run (this=0x6d5cdc0) at /home/build/build-x86_64/kdelibs/src/kdelibs/threadweaver/Weaver/Thread.cpp:142
#8  0x00007f75891c3545 in ?? () from /usr/lib/libQtCore.so.4
#9  0x00007f7588f3481a in start_thread () from /lib/libpthread.so.0
#10 0x00007f7587617c7d in clone () from /lib/libc.so.6
#11 0x0000000000000000 in ?? ()

Thread 10 (Thread 0x7f75650ad710 (LWP 5577)):
#0  0x00007f7588f3837e in __pthread_mutex_unlock_usercnt () from /lib/libpthread.so.0
#1  0x00007f7581fde79a in g_main_context_iterate () from /usr/lib/libglib-2.0.so.0
#2  0x00007f7581fded50 in g_main_context_iteration () from /usr/lib/libglib-2.0.so.0
#3  0x00007f75892df976 in QEventDispatcherGlib::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib/libQtCore.so.4
#4  0x00007f75892b4d02 in QEventLoop::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib/libQtCore.so.4
#5  0x00007f75892b50dc in QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib/libQtCore.so.4
#6  0x00007f75891c0b29 in QThread::exec() () from /usr/lib/libQtCore.so.4
#7  0x00007f758597a695 in KDevelop::CompletionWorkerThread::run (this=0x87cc1e0) at /home/milian/projects/kde4/kdevplatform/language/codecompletion/codecompletionmodel.cpp:82
#8  0x00007f75891c3545 in ?? () from /usr/lib/libQtCore.so.4
#9  0x00007f7588f3481a in start_thread () from /lib/libpthread.so.0
#10 0x00007f7587617c7d in clone () from /lib/libc.so.6
#11 0x0000000000000000 in ?? ()

Thread 9 (Thread 0x7f75648ac710 (LWP 5774)):
#0  0x00007f7588f3907c in pthread_cond_wait@@GLIBC_2.3.2 () from /lib/libpthread.so.0
#1  0x00007f75891c450b in QWaitCondition::wait(QMutex*, unsigned long) () from /usr/lib/libQtCore.so.4
#2  0x00007f758ad23ff6 in ThreadWeaver::WeaverImpl::blockThreadUntilJobsAreBeingAssigned (this=0x228b590, th=0x886ee10)
    at /home/build/build-x86_64/kdelibs/src/kdelibs/threadweaver/Weaver/WeaverImpl.cpp:365
#3  0x00007f758ad2660b in ThreadWeaver::WorkingHardState::applyForWork (this=0x22abd50, th=0x886ee10) at /home/build/build-x86_64/kdelibs/src/kdelibs/threadweaver/Weaver/WorkingHardState.cpp:71
#4  0x00007f758ad26624 in ThreadWeaver::WorkingHardState::applyForWork (this=0x22abd50, th=0x886ee10) at /home/build/build-x86_64/kdelibs/src/kdelibs/threadweaver/Weaver/WorkingHardState.cpp:74
#5  0x00007f758ad24b5f in ThreadWeaver::ThreadRunHelper::run (this=0x7f75648abe30, parent=0x228b590, th=0x886ee10) at /home/build/build-x86_64/kdelibs/src/kdelibs/threadweaver/Weaver/Thread.cpp:87
#6  0x00007f758ad250c8 in ThreadWeaver::Thread::run (this=0x886ee10) at /home/build/build-x86_64/kdelibs/src/kdelibs/threadweaver/Weaver/Thread.cpp:142
#7  0x00007f75891c3545 in ?? () from /usr/lib/libQtCore.so.4
#8  0x00007f7588f3481a in start_thread () from /lib/libpthread.so.0
#9  0x00007f7587617c7d in clone () from /lib/libc.so.6
#10 0x0000000000000000 in ?? ()

Thread 8 (Thread 0x7f7560b78710 (LWP 5801)):
#0  0x00007f7588f3907c in pthread_cond_wait@@GLIBC_2.3.2 () from /lib/libpthread.so.0
#1  0x00007f75867e62a6 in ?? () from /usr/lib/libQtScript.so.4
#2  0x00007f75867e62e9 in ?? () from /usr/lib/libQtScript.so.4
#3  0x00007f7588f3481a in start_thread () from /lib/libpthread.so.0
#4  0x00007f7587617c7d in clone () from /lib/libc.so.6
#5  0x0000000000000000 in ?? ()

Thread 7 (Thread 0x7f7559817710 (LWP 6064)):
#0  0xffffffffff600177 in ?? ()
#1  0x00007fff950da671 in ?? ()
#2  0x00007f7582268e5f in clock_gettime () from /lib/librt.so.1
#3  0x00007f75892dcdcf in ?? () from /usr/lib/libQtCore.so.4
#4  0x00007f75892e1bed in ?? () from /usr/lib/libQtCore.so.4
#5  0x00007f75892e1c15 in ?? () from /usr/lib/libQtCore.so.4
#6  0x00007f75892dfb6d in ?? () from /usr/lib/libQtCore.so.4
#7  0x00007f75892dfc15 in ?? () from /usr/lib/libQtCore.so.4
#8  0x00007f7581fde44a in g_main_context_prepare () from /usr/lib/libglib-2.0.so.0
#9  0x00007f7581fde821 in g_main_context_iterate () from /usr/lib/libglib-2.0.so.0
#10 0x00007f7581fded50 in g_main_context_iteration () from /usr/lib/libglib-2.0.so.0
#11 0x00007f75892df976 in QEventDispatcherGlib::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib/libQtCore.so.4
#12 0x00007f75892b4d02 in QEventLoop::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib/libQtCore.so.4
#13 0x00007f75892b50dc in QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib/libQtCore.so.4
#14 0x00007f75891c0b29 in QThread::exec() () from /usr/lib/libQtCore.so.4
#15 0x00007f758597a695 in KDevelop::CompletionWorkerThread::run (this=0x9c530b0) at /home/milian/projects/kde4/kdevplatform/language/codecompletion/codecompletionmodel.cpp:82
#16 0x00007f75891c3545 in ?? () from /usr/lib/libQtCore.so.4
#17 0x00007f7588f3481a in start_thread () from /lib/libpthread.so.0
#18 0x00007f7587617c7d in clone () from /lib/libc.so.6
#19 0x0000000000000000 in ?? ()

Thread 6 (Thread 0x7f7559016710 (LWP 6065)):
#0  0xffffffffff600177 in ?? ()
#1  0x00007fff950da671 in ?? ()
#2  0x00007f7582268e5f in clock_gettime () from /lib/librt.so.1
#3  0x00007f75892dcdcf in ?? () from /usr/lib/libQtCore.so.4
#4  0x00007f75892e1bed in ?? () from /usr/lib/libQtCore.so.4
#5  0x00007f75892e1c15 in ?? () from /usr/lib/libQtCore.so.4
#6  0x00007f75892dfb6d in ?? () from /usr/lib/libQtCore.so.4
#7  0x00007f75892dfc15 in ?? () from /usr/lib/libQtCore.so.4
#8  0x00007f7581fde44a in g_main_context_prepare () from /usr/lib/libglib-2.0.so.0
#9  0x00007f7581fde821 in g_main_context_iterate () from /usr/lib/libglib-2.0.so.0
#10 0x00007f7581fded50 in g_main_context_iteration () from /usr/lib/libglib-2.0.so.0
#11 0x00007f75892df976 in QEventDispatcherGlib::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib/libQtCore.so.4
#12 0x00007f75892b4d02 in QEventLoop::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib/libQtCore.so.4
#13 0x00007f75892b50dc in QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib/libQtCore.so.4
#14 0x00007f75891c0b29 in QThread::exec() () from /usr/lib/libQtCore.so.4
#15 0x00007f758597a695 in KDevelop::CompletionWorkerThread::run (this=0x9b20d60) at /home/milian/projects/kde4/kdevplatform/language/codecompletion/codecompletionmodel.cpp:82
#16 0x00007f75891c3545 in ?? () from /usr/lib/libQtCore.so.4
#17 0x00007f7588f3481a in start_thread () from /lib/libpthread.so.0
#18 0x00007f7587617c7d in clone () from /lib/libc.so.6
#19 0x0000000000000000 in ?? ()

Thread 5 (Thread 0x7f7558815710 (LWP 6066)):
#0  0x00007f7588f393e9 in pthread_cond_timedwait@@GLIBC_2.3.2 () from /lib/libpthread.so.0
#1  0x00007f75891c2ec5 in ?? () from /usr/lib/libQtCore.so.4
#2  0x00007f75891c3020 in QThread::msleep(unsigned long) () from /usr/lib/libQtCore.so.4
#3  0x00007f7559bc3662 in UIBlockTester::UIBlockTesterThread::run (this=0x9c91930) at /home/milian/projects/kde4/kdevelop/languages/cpp/cpplanguagesupport.cpp:672
#4  0x00007f75891c3545 in ?? () from /usr/lib/libQtCore.so.4
#5  0x00007f7588f3481a in start_thread () from /lib/libpthread.so.0
#6  0x00007f7587617c7d in clone () from /lib/libc.so.6
#7  0x0000000000000000 in ?? ()

Thread 4 (Thread 0x7f7558014710 (LWP 6067)):
#0  0x00007f7588f3907c in pthread_cond_wait@@GLIBC_2.3.2 () from /lib/libpthread.so.0
#1  0x00007f75891c450b in QWaitCondition::wait(QMutex*, unsigned long) () from /usr/lib/libQtCore.so.4
#2  0x00007f758ad23ff6 in ThreadWeaver::WeaverImpl::blockThreadUntilJobsAreBeingAssigned (this=0x228b590, th=0x9b6d520)
    at /home/build/build-x86_64/kdelibs/src/kdelibs/threadweaver/Weaver/WeaverImpl.cpp:365
#3  0x00007f758ad2660b in ThreadWeaver::WorkingHardState::applyForWork (this=0x22abd50, th=0x9b6d520) at /home/build/build-x86_64/kdelibs/src/kdelibs/threadweaver/Weaver/WorkingHardState.cpp:71
#4  0x00007f758ad24b5f in ThreadWeaver::ThreadRunHelper::run (this=0x7f7558013e30, parent=0x228b590, th=0x9b6d520) at /home/build/build-x86_64/kdelibs/src/kdelibs/threadweaver/Weaver/Thread.cpp:87
#5  0x00007f758ad250c8 in ThreadWeaver::Thread::run (this=0x9b6d520) at /home/build/build-x86_64/kdelibs/src/kdelibs/threadweaver/Weaver/Thread.cpp:142
#6  0x00007f75891c3545 in ?? () from /usr/lib/libQtCore.so.4
#7  0x00007f7588f3481a in start_thread () from /lib/libpthread.so.0
#8  0x00007f7587617c7d in clone () from /lib/libc.so.6
#9  0x0000000000000000 in ?? ()

Thread 3 (Thread 0x7f7557813710 (LWP 6068)):
#0  0x00007f7588f3907c in pthread_cond_wait@@GLIBC_2.3.2 () from /lib/libpthread.so.0
#1  0x00007f75891c450b in QWaitCondition::wait(QMutex*, unsigned long) () from /usr/lib/libQtCore.so.4
#2  0x00007f758ad23ff6 in ThreadWeaver::WeaverImpl::blockThreadUntilJobsAreBeingAssigned (this=0x228b590, th=0x9b83660)
    at /home/build/build-x86_64/kdelibs/src/kdelibs/threadweaver/Weaver/WeaverImpl.cpp:365
#3  0x00007f758ad2660b in ThreadWeaver::WorkingHardState::applyForWork (this=0x22abd50, th=0x9b83660) at /home/build/build-x86_64/kdelibs/src/kdelibs/threadweaver/Weaver/WorkingHardState.cpp:71
#4  0x00007f758ad26624 in ThreadWeaver::WorkingHardState::applyForWork (this=0x22abd50, th=0x9b83660) at /home/build/build-x86_64/kdelibs/src/kdelibs/threadweaver/Weaver/WorkingHardState.cpp:74
#5  0x00007f758ad26624 in ThreadWeaver::WorkingHardState::applyForWork (this=0x22abd50, th=0x9b83660) at /home/build/build-x86_64/kdelibs/src/kdelibs/threadweaver/Weaver/WorkingHardState.cpp:74
#6  0x00007f758ad26624 in ThreadWeaver::WorkingHardState::applyForWork (this=0x22abd50, th=0x9b83660) at /home/build/build-x86_64/kdelibs/src/kdelibs/threadweaver/Weaver/WorkingHardState.cpp:74
#7  0x00007f758ad24b5f in ThreadWeaver::ThreadRunHelper::run (this=0x7f7557812e30, parent=0x228b590, th=0x9b83660) at /home/build/build-x86_64/kdelibs/src/kdelibs/threadweaver/Weaver/Thread.cpp:87
#8  0x00007f758ad250c8 in ThreadWeaver::Thread::run (this=0x9b83660) at /home/build/build-x86_64/kdelibs/src/kdelibs/threadweaver/Weaver/Thread.cpp:142
#9  0x00007f75891c3545 in ?? () from /usr/lib/libQtCore.so.4
#10 0x00007f7588f3481a in start_thread () from /lib/libpthread.so.0
#11 0x00007f7587617c7d in clone () from /lib/libc.so.6
#12 0x0000000000000000 in ?? ()

Thread 2 (Thread 0x7f756fc5e710 (LWP 9569)):
#0  0x00007f7588f3907c in pthread_cond_wait@@GLIBC_2.3.2 () from /lib/libpthread.so.0
#1  0x00007f75891c450b in QWaitCondition::wait(QMutex*, unsigned long) () from /usr/lib/libQtCore.so.4
#2  0x00007f758ad23ff6 in ThreadWeaver::WeaverImpl::blockThreadUntilJobsAreBeingAssigned (this=0x2efabe0, th=0xa531310)
    at /home/build/build-x86_64/kdelibs/src/kdelibs/threadweaver/Weaver/WeaverImpl.cpp:365
#3  0x00007f758ad2660b in ThreadWeaver::WorkingHardState::applyForWork (this=0x2ef30e0, th=0xa531310) at /home/build/build-x86_64/kdelibs/src/kdelibs/threadweaver/Weaver/WorkingHardState.cpp:71
#4  0x00007f758ad26624 in ThreadWeaver::WorkingHardState::applyForWork (this=0x2ef30e0, th=0xa531310) at /home/build/build-x86_64/kdelibs/src/kdelibs/threadweaver/Weaver/WorkingHardState.cpp:74
#5  0x00007f758ad26624 in ThreadWeaver::WorkingHardState::applyForWork (this=0x2ef30e0, th=0xa531310) at /home/build/build-x86_64/kdelibs/src/kdelibs/threadweaver/Weaver/WorkingHardState.cpp:74
#6  0x00007f758ad26624 in ThreadWeaver::WorkingHardState::applyForWork (this=0x2ef30e0, th=0xa531310) at /home/build/build-x86_64/kdelibs/src/kdelibs/threadweaver/Weaver/WorkingHardState.cpp:74
#7  0x00007f758ad26624 in ThreadWeaver::WorkingHardState::applyForWork (this=0x2ef30e0, th=0xa531310) at /home/build/build-x86_64/kdelibs/src/kdelibs/threadweaver/Weaver/WorkingHardState.cpp:74
#8  0x00007f758ad26624 in ThreadWeaver::WorkingHardState::applyForWork (this=0x2ef30e0, th=0xa531310) at /home/build/build-x86_64/kdelibs/src/kdelibs/threadweaver/Weaver/WorkingHardState.cpp:74
#9  0x00007f758ad24b5f in ThreadWeaver::ThreadRunHelper::run (this=0x7f756fc5de30, parent=0x2efabe0, th=0xa531310) at /home/build/build-x86_64/kdelibs/src/kdelibs/threadweaver/Weaver/Thread.cpp:87
#10 0x00007f758ad250c8 in ThreadWeaver::Thread::run (this=0xa531310) at /home/build/build-x86_64/kdelibs/src/kdelibs/threadweaver/Weaver/Thread.cpp:142
#11 0x00007f75891c3545 in ?? () from /usr/lib/libQtCore.so.4
#12 0x00007f7588f3481a in start_thread () from /lib/libpthread.so.0
#13 0x00007f7587617c7d in clone () from /lib/libc.so.6
#14 0x0000000000000000 in ?? ()

Thread 1 (Thread 0x7f758c8fa760 (LWP 5525)):
[KCrash Handler]
#5  0x00007f758757b035 in raise () from /lib/libc.so.6
#6  0x00007f758757c460 in abort () from /lib/libc.so.6
#7  0x00007f75891bb6cf in qt_message_output(QtMsgType, char const*) () from /usr/lib/libQtCore.so.4
#8  0x00007f75891bb872 in ?? () from /usr/lib/libQtCore.so.4
#9  0x00007f75891bba25 in qFatal(char const*, ...) () from /usr/lib/libQtCore.so.4
#10 0x00007f756c98fc83 in KDevelop::GdbVariable::setVarobj (this=0xf55a120, v=...) at /home/milian/projects/kde4/kdevelop/debuggers/gdb/gdbvariable.cpp:80
#11 0x00007f756c991671 in CreateVarobjHandler::handle (this=0x866dd80, r=...) at /home/milian/projects/kde4/kdevelop/debuggers/gdb/gdbvariable.cpp:104
#12 0x00007f756c959ddf in GDBDebugger::GDBCommand::invokeHandler (this=0xf8fdc60, r=...) at /home/milian/projects/kde4/kdevelop/debuggers/gdb/gdbcommand.cpp:80
#13 0x00007f756c94e5c8 in GDBDebugger::GDB::processLine (this=0x102baeb0, line=...) at /home/milian/projects/kde4/kdevelop/debuggers/gdb/gdb.cpp:281
#14 0x00007f756c94dd60 in GDBDebugger::GDB::readyReadStandardOutput (this=0x102baeb0) at /home/milian/projects/kde4/kdevelop/debuggers/gdb/gdb.cpp:175
#15 0x00007f756c94c6c5 in GDBDebugger::GDB::qt_metacall (this=0x102baeb0, _c=QMetaObject::InvokeMetaMethod, _id=11, _a=0x7fff950074a0)
    at /home/milian/projects/.build/kde4/kdevelop/debuggers/gdb/moc_gdb.cpp:111
#16 0x00007f75892c90b3 in QMetaObject::activate(QObject*, QMetaObject const*, int, void**) () from /usr/lib/libQtCore.so.4
#17 0x00007f758925659a in ?? () from /usr/lib/libQtCore.so.4
#18 0x00007f7589256979 in QProcess::qt_metacall(QMetaObject::Call, int, void**) () from /usr/lib/libQtCore.so.4
#19 0x00007f758c37b378 in KProcess::qt_metacall (this=0x1595, _c=5525, _id=6, _a=0xffffffffffffffff) at /home/build/build-x86_64/kdelibs/src/build/kdecore/kprocess.moc:69
#20 0x00007f75892c90b3 in QMetaObject::activate(QObject*, QMetaObject const*, int, void**) () from /usr/lib/libQtCore.so.4
#21 0x00007f75893153ae in QSocketNotifier::activated(int) () from /usr/lib/libQtCore.so.4
#22 0x00007f75892d02f3 in QSocketNotifier::event(QEvent*) () from /usr/lib/libQtCore.so.4
#23 0x00007f75882046bc in QApplicationPrivate::notify_helper(QObject*, QEvent*) () from /usr/lib/libQtGui.so.4
#24 0x00007f758820acdd in QApplication::notify(QObject*, QEvent*) () from /usr/lib/libQtGui.so.4
#25 0x00007f7589a70cf6 in KApplication::notify (this=0x7fff950080a0, receiver=0x1019ed90, event=0x7fff95007cc0) at /home/build/build-x86_64/kdelibs/src/kdelibs/kdeui/kernel/kapplication.cpp:302
#26 0x00007f75892b63dc in QCoreApplication::notifyInternal(QObject*, QEvent*) () from /usr/lib/libQtCore.so.4
#27 0x00007f75892dfcda in ?? () from /usr/lib/libQtCore.so.4
#28 0x00007f7581fdb26e in g_main_context_dispatch () from /usr/lib/libglib-2.0.so.0
#29 0x00007f7581fdec28 in g_main_context_iterate () from /usr/lib/libglib-2.0.so.0
#30 0x00007f7581fded50 in g_main_context_iteration () from /usr/lib/libglib-2.0.so.0
#31 0x00007f75892df923 in QEventDispatcherGlib::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib/libQtCore.so.4
#32 0x00007f75882b179e in ?? () from /usr/lib/libQtGui.so.4
#33 0x00007f75892b4d02 in QEventLoop::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib/libQtCore.so.4
#34 0x00007f75892b50dc in QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib/libQtCore.so.4
#35 0x00007f75892b8e1b in QCoreApplication::exec() () from /usr/lib/libQtCore.so.4
#36 0x00000000004062c3 in main (argc=1, argv=0x7fff950092d8) at /home/milian/projects/kde4/kdevelop/app/main.cpp:209

Reported using DrKonqi
Comment 1 Vladimir Prus 2009-12-27 11:24:20 UTC
Are you able to reproduce this issue at will? The backtrace does not include the necessary information, but if you can reproduce I can tell what extra information to get, and where.
Comment 2 Niko Sams 2009-12-27 19:07:07 UTC
Talked to milian on irc; he couldn't reproduce.
I also couldn't.
Comment 3 Niko Sams 2010-04-25 21:41:58 UTC
*** Bug 230431 has been marked as a duplicate of this bug. ***
Comment 4 Niko Sams 2010-04-25 21:42:04 UTC
*** Bug 234953 has been marked as a duplicate of this bug. ***
Comment 5 Niko Sams 2010-04-25 21:42:16 UTC
*** Bug 233045 has been marked as a duplicate of this bug. ***
Comment 6 Niko Sams 2010-04-25 21:56:38 UTC
SVN commit 1118742 by nsams:

Fix crash when attachMaybe is called a second time before the first -var-create call returned

BUG: 219570

 M  +6 -1      gdbvariable.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1118742
Comment 7 Niko Sams 2010-04-25 23:34:22 UTC
*** Bug 235304 has been marked as a duplicate of this bug. ***