Fix crash when attachMaybe is called a second time before the first -var-create call returned

BUG: 219570